GC: Added G1 reports